post rebase fixes